# finna-be-octo-robot

./: .gitignore  Readme.md  outfile.txt  precompute.py  stopwords_cffi.py  stopwords_ctypes.py
cpp/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  cpp  snippets  test
cpp/src/: capi.cc  capi.hh  lg.cpp  lg.hh  main.cpp  test.cpp
